@@ -60,8 +60,6 @@ struct ast_frame* create_text_frame(const char *text, int copy);
 
 // slinear frame functions
 struct ast_frame* create_slinear_frame( char* data ) ;
-void mix_slinear_frames( char* dst, const char* src, int samples ) ;
-void unmix_slinear_frame( char* dst, const char* src1, const char* src2, int samples ) ;
 
 // silent frame functions
 conf_frame* get_silent_frame( void ) ;
